fix(control): fix bugs \n\n * fix a bug that causes some custome fonts not display properly. \n * scroll math block when it is too long.

--- a/source/css/common.styl
+++ b/source/css/common.styl
@@ -13,6 +13,11 @@
   max-width: $max-width;
   margin: 0 auto;
   width: 100%;
+  overflow: hidden;
+}
+
+mjx-container {
+  overflow: auto hidden;
 }
 
 .wall-main {
