--- a/source/css/index.styl
+++ b/source/css/index.styl
@@ -443,10 +443,6 @@ for v, k in timeline_colors {
   }
 }
 
-.wall {
-  overflow: hidden;
-}
-
 @media screen and (max-width: 1023px) {
   .wall {
     height: calc(100vh - 60px);
